gigedit (0.0.3-1) unreleased; urgency=low

  * Initial Release.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Mon, 09 Apr 2007 19:00:13 +0200
